--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     <!--Sale image-->
     <div class="Sale-image">
         <img src="./images/Sale-image.jpeg" alt="sale">
+        <div  class="Sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top Courses for just 499. Just one day to save but a 
+                lifetime to learn
+            </p>
+
+        </div>
     </div>
 
     <!-- Recommended -->
