--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
-
-
+        </div> 
+        <div class="Navbar__4">
+            <i class="fa-solid fa-bars"></i>
         </div>
     </div>
 
